# draughts-detector

./: CMakeLists.txt  GridDetection.cpp  GridDetection.h  PawnsDetection.cpp  PawnsDetection.h  README.txt  draughtsdetector.cpp  main.cpp  main.h
