CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OpenCV_STATIC OFF)
FIND_PACKAGE(OpenCV REQUIRED)

PROJECT(DraughtsDetector)

# Enable C++11
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

#OpenCV
SET(OpenCV_STATIC OFF)
FIND_PACKAGE(OpenCV REQUIRED QUIET)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

file(GLOB SRCFILES *.cpp)
file(GLOB HEADERFILES *.h)
add_executable(draughts_detector ${SRCFILES} ${HEADERFILES})

TARGET_LINK_LIBRARIES(draughts_detector ${OpenCV_LIBS})






